# PyMouse

./: .gitignore  crowdin.yml  pyproject.toml  readme.rst  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml
localization/: en_us.json  pt_br.json
pymouse/: __init__.py  __main__.py  client.py  config.py
pymouse/assents/: __init__.py  utils.py
pymouse/database/exceptions/: __init__.py
pymouse/database/modules/: __init__.py
pymouse/database/plugins/utilities/afkmodel_db/: __init__.py
pymouse/database/plugins/utilities/usersmodel_db/: __init__.py
pymouse/decorators/: __init__.py
pymouse/plugins/: __init__.py
pymouse/plugins/afk/: __init__.py
pymouse/plugins/afk/handlers/: __init__.py  check.py  set.py
pymouse/plugins/afk/utilities/: __init__.py  afk.py
pymouse/plugins/animals/handlers/: cat.py  dog.py
pymouse/plugins/animals/utilities/: cat.py  dog.py
pymouse/plugins/medias/: __init__.py
pymouse/plugins/medias/handlers/: __init__.py  youtube.py
pymouse/plugins/medias/utilities/: __init__.py  youtube.py
pymouse/plugins/miscellaneous/: __init__.py
pymouse/plugins/miscellaneous/handlers/: __init__.py  gsmarena.py  weather.py
pymouse/plugins/miscellaneous/utilities/: __init__.py  gsmarena.py  weather.py
pymouse/plugins/pm_menu/: __init__.py
pymouse/plugins/pm_menu/handlers/: __init__.py  help.py  language.py  privacy.py  start.py
pymouse/plugins/pm_menu/utilities/: localization.py
pymouse/plugins/sudoers/: __init__.py
pymouse/plugins/sudoers/handlers/: __init__.py  boot.py  ping.py  speedtest.py
pymouse/services/load_handler/exceptions/: __init__.py
pymouse/services/load_handler/handlers/: __init__.py
pymouse/services/load_handler/run/: __init__.py
pymouse/utils/: __init__.py
pymouse/utils/decorators/: __init__.py
pymouse/utils/exceptions/users/: __init__.py
pymouse/utils/fmt/: __init__.py
pymouse/utils/group/: __init__.py
pymouse/utils/http/: __init__.py
pymouse/utils/localization/: __init__.py
pymouse/utils/logger/: __init__.py
pymouse/utils/tools/DownloadPath/: __init__.py
pymouse/utils/tools/gsm_arena/: __init__.py
pymouse/utils/tools/network/: __init__.py
pymouse/utils/tools/utilities/: __init__.py
pymouse/utils/tools/weather/: __init__.py
pymouse/utils/tools/youtube_downloader/: __init__.py
resources/scripts/: termux_install.sh  windows_install.bat
resources/termux/: __init__.py
resources/windows/utils/scripts/: win_installer_pymouse.bat
(+9 files in other folders)
