[project]
name = "PyMouse"
version = "1.0.0"
authors = [{ name = "BubbalooTeam", email = "bubbalooteam@proton.me" }]
requires-python = ">=3.9"
dependencies = [
    "bs4==0.0.2",
    "heroku3==5.2.1",
    "httpx[http2,socks]==0.27.2",
    "hydrogram @ git+https://github.com/hydrogram/hydrogram@dev",
    "hydrokeyboard @ git+https://github.com/DaviisDev/HydroKeyboard.git",
    "HydroPatch @ git+https://github.com/DaviisDev/HydroPatch.git",
    "pillow==10.4.0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "sentry-sdk==2.14.0",
    "speedtest-cli==2.1.3",
    "tgcrypto>=1.2.5",
    "wget==3.2",
    "youtube-search-python==1.6.6",
    "yt_dlp==2024.9.27",
]


[project.urls]
Repository = "https://github.com/DaviisDev/PyMouse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 99
show-fixes = true
target-version = "py39"
select = [
  "I", # isort
  "E", # pycodestyle
  "F", # pyflakes
  "UP",  # pyupgrade
  "PTH",  # flake8-use-pathlib
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RET", # flake8-return
  "RUF",  # ruff
]

[tool.ruff.isort]
known-first-party = ["pymouse"]

[tool.hatch.build.targets.wheel]
packages = ["pymouse"]